--- a/jp/publish-a-paper-3.qmd
+++ b/jp/publish-a-paper-3.qmd
@@ -156,7 +156,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-梅雨の雨音が、夜の静けさをやわらかく撫でていた。診療のあと、私たちはパソコンに向かう時間をとることが多い。今夜も私はモニターに映る原稿を眺めていた。机の上には、論文と調査票、そして紙ナプキンに書かれたメモが散らばっている。冷めかけたコーヒーに、そっと手を伸ばした。
+梅雨の雨音は夜の静けさをなぐさめてくれる。診療の後、私たちはパソコンに向かう時間をとることが多い。今夜も私はモニターに映る原稿を眺めていた。机の上には、論文と調査票、そして紙ナプキンに書かれたメモが散らばっている。冷めかけたコーヒーに、そっと手を伸ばした。
 
 書いては止まり、止まってはまた戻る。
 :::
@@ -164,7 +164,7 @@ a:hover {
 「本研究の目的は―」
 
 ::: voice-daughter
-こんなに短い一文に、こんなにも多くの意味が乗ってしまうことを、今の私は知っている。目的は、個人のものじゃない。研究仮説というかたちで、普遍的に共有できるように開かれていなければならない。それは私がどの地点から世界を眺め、どんな方向へ歩こうとしているのかを、そっと誰かに手渡すような行為だ。
+こんなに短い一文に、こんなにも多くの意味が乗ってしまうことを、今の私は知っている。目的は、個人のものじゃない。研究仮説というフォーマットで、普遍的に共有できるように開かれていなければならない。それは私がどの地点から世界を眺め、どんな方向へ歩こうとしているのかを、そっと誰かに手渡すような行為だ。
 
 次に目が留まる。
 :::
@@ -174,15 +174,13 @@ a:hover {
 ::: voice-daughter
 そこに置かれた数字も、以前とは違って見える。数字は患者さんになにが起きたか。そして、世界への問いかけへの返事なんだ。私たちはよい診療をしてきたの？問い方が変われば、返ってくる数字も変わる。数字はただ並んでいるだけに見えて、実はたくさんのことを語っている。
 
-臨床研究だからこそ、研究仮説には医療の価値観が滲む。それは「正しいかどうかを知る」というより「よりよい技術に近づくための知識を得る」という態度に近い。
+患者さんを対象にした研究だからこそ、研究仮説には医療の価値観が滲む。それは「正しいかどうかを知る」というより「よりよい技術に近づくための知識を得る」という態度に近い。
 
-深夜になって私は考察までを書き終えた。調査をデザインしたときに抱いていた私自身の疑問――今は研究仮説と呼ぶべきもの――が、結論でちゃんと答えられているか確かめる。カップの中のコーヒーはすっかり冷たくなっていたけれど、それを飲み干したとき、ひとつの区切りがついた気がした。窓の外には、少しずつ朝の気配が混じり始めていた。
-
-私は深く息をつき、ゆっくりとキーボードを叩いた。
+コーヒーは机の端で静かに冷えていた。モニターには、書き上げたばかりのConclusionが映る。調査をデザインしたときに抱いていた疑問に答えられているか、ひとつひとつ確かめる。私は軽く頷き、ゆっくりとキーボードを叩いた。
 :::
 :::::::::::::::::::::::::::::::::
 
-Acknowledgement
+Acknowledgements
 
 We appreciate the advice from an anonymous statistician.
 
