--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -264,10 +264,18 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「分野によって使われる統計手法が違うからね。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）。話を戻すとさ。大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。まあ、頻度論（frequentist）の立場で統計学を学ばないと、なかなか難しいんだけどね。p値に関する説明をいくつかしてみようか」
+お父さん「分野によって使われる統計手法が違うからね。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）。話を戻すとさ。大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。まあ、頻度論（frequentist）の立場で統計学をきっちりやらないと、なかなか難しいんだけどね。まず、試験によってはp値と比べる基準（有意水準）が5%でないこともある。たとえば**中間解析（interim analysis）**があるかな。論文の抄録を読んでごらん。実はJCOG9502では最終解析の前に、中間解析をする計画になっていて、この論文はそのとき早期中止になった結果を報告しているみたいだよ。中間解析では、5%より低い有意水準で検定するのが一般的なんだ」
 :::
 
-1.  p値は帰無仮説が正しい確率である
+::: voice-daughter
+私「じゃあ有意差がついたから早期中止したってこと？」
+:::
+
+::: voice-father
+お父さん「いや、JCOG9502が早期中止した理由は、有意差がついたからではなく、LTA群が有意に勝つ見込みがないと、効果安全性評価委員会が判断したためだけどね。他にも典型的な誤解はある。p値に関する説明をいくつかしてみようか」
+:::
+
+1.  p値は**帰無仮説（null hypothesis）**が正しい確率である
 2.  p値が小さく、統計学的に有意であることは、科学的に重要な知見が得られたことを意味する
 3.  統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する
 
@@ -344,7 +352,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「これは日本の話なんだけど。昔、薬事承認の根拠として非劣性試験を行っていた時代があってね。その時代の経験を踏まえると、研究仮説と統計的な判断基準の関係は、厳密に考えとかないとちょっとまずいと思うんだ」
+お父さん「そうだね、仮説にはうるさいね。これは日本の話なんだけど。昔、薬事承認の根拠として非劣性試験を行っていた時代があってね。その時代の経験を踏まえると、研究仮説と統計的な判断基準の関係は、厳密に考えとかないとちょっとまずいと思うんだ」
 :::
 ::::::::::::::::::::::::::::::::::::
 
@@ -354,19 +362,25 @@ summary(fit)
 :::
 
 ::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
-頻度論によるp値の説明として正しいものは、次のうちどれでしょうか。
 
-1.  帰無仮説が正しい確率である
-2.  対立仮説が正しい確率である
-3.  0.05よりも小さいと有意差があると判断する
-4.  1、2、3すべて誤り
+![](frequentist-2.jpg)
+
+この人は誰でしょう。
+
+1.  Kaplan
+2.  Meier
+3.  Cox
+4.  Wilcoxon
 :::
 
 ::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
--   **正解は4です**
+-   **正解は3です**
 
-有意と判断する基準（有意水準）が5%であれば3は正しいのですが、試験によっては有意水準が5%でないこともあります。実はJCOG9502では中間解析が行われていて、その結果、早期中止になったという経緯があります。一般に中間解析では、5%より低い有意水準で検定が行われます。ただし、JCOG9502が早期中止した理由は、有意差がついたからではなく、LTA群が有意に勝つ見込みがないと、効果安全性評価委員会が判断したためでした。
+この方がCox先生です。
+
+[David Cox (statistician)](https://en.wikipedia.org/wiki/David_Cox_(statistician))
 :::
+
 
 ### 文献
 
