--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -360,6 +360,7 @@ aj_event1 <- cifplot(Event(time_cir, status_cir) ~ stoma,
   data         = dat,
   outcome.type = "competing-risk", 
   type.y       = "surv",
+  label.y      = "1-Aalen-Johansen",
   code.event1  = 1, 
   code.event2  = 2
 )
@@ -367,6 +368,7 @@ aj_event2 <- cifplot(Event(time_cir, status_cir) ~ stoma,
   data         = dat,
   outcome.type = "competing-risk", 
   type.y       = "risk",
+  label.y      = "Aalen-Johansen",
   code.event1  = 2, 
   code.event2  = 1
 )
@@ -391,13 +393,15 @@ dat$status_cir1 <- as.numeric(dat$status_cir==1)
 km_event1 <- cifplot(Event(time_cir, status_cir1) ~ stoma,
   data         = dat,
   outcome.type = "survival", 
-  type.y       = "surv"
+  type.y       = "surv",
+  label.y      = "Kaplan–Meier"
 )
 dat$status_cir2 <- as.numeric(dat$status_cir==2)
 km_event2 <- cifplot(Event(time_cir, status_cir2) ~ stoma,
   data         = dat,
   outcome.type = "survival", 
-  type.y       = "risk"
+  type.y       = "risk",
+  label.y      = "1-Kaplan–Meier"
 )
 km_list <- list(km_event1$plot, km_event2$plot)
 km_panel <- cifpanel(rows.columns.panel = c(1,2), plots=km_list)
