--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -160,7 +160,7 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では**交絡因子**を調整しないといけない、とかいってたよね」
+私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では**交絡因子（confounder）**を調整しないといけない、とかいってたよね」
 ::: 
 
 ::: voice-father
@@ -168,23 +168,15 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 ::: 
 
 ::: voice-daughter
-私「でもさ、調整しないオッズ比も計算できるでしょ。どっちが正しいのかってどうやればわかるの？統計学の本を読んでも、書いてなくて」
+私「交絡調整について解説してくれない？統計学の本を読んでも、書いてなくて」
 ::: 
 
 ::: voice-father
-お父さん「それは統計学だけではわからない問題なんだ。データがどんな確率分布に従っているか、誰も知らないからね。因果推論や医学知識を使って判断すべき問題になる」
-::: 
-
-::: voice-daughter
-私「なにそれ？統計学の話じゃないの？ロジスティック回帰について聞いてるんだけど」
-::: 
-
-::: voice-father
-お父さん「そう思うよねえ。じゃあちょっと時間をかけて説明させてよ。」
+お父さん「じゃあちょっと時間をかけて説明させてよ。」
 :::
 
 ::: voice-daughter
-私「いいけど」
+私「いいよ、ありがとう」
 ::: 
 
 ::: voice-father
@@ -238,16 +230,14 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。前にいったように、こういう因子は、疫学では**交絡因子（confounder）**と呼ばれている。交絡因子はロジスティック回帰で調整しないといけない。調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
+お父さん「そういうこと。これが疫学でいう交絡因子。交絡因子を調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
 :::
 :::::::::::::::::::::::::::::::::
 
 
 ::: {.callout-note appearance="simple" title="Simpsonのパラドックス"}
 
-コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのかみてみましょう。ここでは層別解析を用いて説明しますが、ロジスティック回帰でオッズ比を求めたときも、同じ計算結果になります（交互作用をうまく入れる必要がありますが）。
-
-表1は、コーヒーと膵がんを想定した仮想データです。コーヒー摂取群とコーヒー非摂取群で、それぞれ膵がん発生ありとなしが調べられています。膵がんを発生したのはそれぞれの群で15人と12人、膵がんがなかったのは365人と868人です。オッズ比を計算してみましょう。コーヒー摂取群では膵がんリスクは3.9%で、コーヒーを摂取しない群の1.4%に比べて、オッズ比は3倍です。これは、コーヒーを摂取すると、膵がんリスクが高くなることを意味しています。
+コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのか、一番シンプルな層別解析でみてみましょう。表1は、コーヒーと膵がんを想定した仮想データです。コーヒー摂取群とコーヒー非摂取群で、それぞれ膵がん発生ありとなしが調べられています。膵がんを発生したのはそれぞれの群で15人と12人、膵がんがなかったのは365人と868人です。オッズ比を計算してみましょう。コーヒー摂取群では膵がんリスクは3.9%で、コーヒーを摂取しない群の1.4%に比べて、オッズ比は3倍です。これは、コーヒーを摂取すると、膵がんリスクが高くなることを意味しています。
 
 表2には、交絡因子（喫煙）によって対象者を層別した結果が示されています。ここから膵がんのオッズ比を求めるとどうなるでしょうか。コーヒー摂取でも非摂取でもリスクは同じですよね。つまりオッズ比は1倍です。
 
@@ -280,29 +270,21 @@ Keywords: binary outcome, confounding/collapsibility, effect measure, generalize
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー。単純な解析ではリスク因子なのに、層別しただけで関連が消えた。こんなことあるんだ」
+私「へー。単純な解析ではコーヒーはリスク因子なのに、層別しただけで関連が消えた。バイアスがあるんでしょとは思ったけど、こんなことあるんだ。あれ？ちょっと前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたっけ？そのせい？」
 ::: 
 
 ::: voice-father
-お父さん「そう、交絡因子を無視して、間違った研究結果を報告してしまうとまずいでしょ。もうひとつ注目してほしいのが、喫煙とコーヒーの関連。喫煙状況ごとにコーヒー摂取割合を計算してみてよ」
+お父さん「うん、オッズ比は併合可能ではない、non-collapsibleな指標だね。それもあるんだけど、観察研究のほとんどで、交絡の影響は、効果の指標の違いよりずっと大きいんだ」
 ::: 
 
 ::: voice-daughter
-私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」
+私「ふむふむ、ってことは、層別解析じゃなくてロジスティック回帰を使わないとだめって話だっけ？」
 ::: 
 
 ::: voice-father
-お父さん「うん、喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。もし仮に、 コーヒー摂取・非摂取という介入をランダムに割付けるランダム化介入試験を行ったらどうなると思う？」
+お父さん「ううん、層別でもロジスティックでもいいんだけど、喫煙を調整しないといけないって話。実際解析してみると、どっちでもほぼ同じ結果になる。確かめてみようか」
 ::: 
-
-::: voice-daughter
-私「両群で喫煙割合は、ほぼ同じになるはず」
-::: 
-
-::: voice-father
-お父さん「うん。そうすると、ランダム化介入試験で得られるオッズ比は、喫煙・非喫煙別の結果を平均することになるから、全体でも1倍に近い結果になると予想される。つまり、層別する前のオッズ比3倍という結果は、コーヒーではなく喫煙が真の原因となって生じた見かけの関連なので、層別した後のオッズ比が正しい。だから、ロジスティック回帰で調整オッズ比を求めるべきなんだ」
-::: 
-::::::::::::::::::::::::::::::::: 
+:::::::::::::::::::::::::::::::::
 
 ::: {.callout-note title="glm()を用いた膵がんデータの解析"}
 
@@ -335,22 +317,77 @@ print(odds_ratio2)
 ```
 :::
 
-
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
 お父さん「Simpsonのパラドックスが起きる条件を知りたい？」
 ::: 
 
 ::: voice-daughter
-私「そりゃあね。解析方法によってオッズ比が1になるのは不思議だもの。あれ？ちょっと前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたっけ？」
+私「そりゃあね。解析方法によってオッズ比が1になるのは不思議だもの」
 ::: 
 
 ::: voice-father
-お父さん「うん、オッズ比は併合可能ではない、non-collapsibleな指標だね。でも、Simpsonのパラドックスの条件は、オッズ比固有のものじゃない。ポイントは3つの変数の相関関係なんだ。第3の因子と曝露に相関があり、さらに第3の因子とアウトカムにも相関があるとき、Simpsonのパラドックスが起きる」
+お父さん「じゃあ説明するね。まず前提になるのが、喫煙が膵がんのリスク因子だってこと。これはいいよね」
 ::: 
 
 ::: voice-daughter
-私「なるほどね、喫煙はコーヒー摂取と関連する。さらに喫煙は膵がんリスクも上げる。そうするとオッズ比の値が変わる。ああ、もともとバイアスが入っちゃってたんだから、調整して値が変わるのは当たり前か」
+私「うん」
+::: 
+
+::: voice-father
+お父さん「次に注目してほしいのが、喫煙とコーヒーの関連なんだ。喫煙状況ごとにコーヒー摂取割合を計算してみてよ」
+::: 
+
+::: voice-daughter
+私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」
+::: 
+
+::: voice-father
+お父さん「うん、喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。これは、当時、たばこを吸いながらコーヒーを飲んでいたことを表している」
+::: 
+
+::: voice-daughter
+私「時代を感じるね、仕事終わったらくつろぎたい気持ちはめっちゃわかる」
+::: 
+
+::: voice-father
+お父さん「まとめると、ポイントは3つの変数の相関関係なんだ。第3の因子と曝露に相関があり、さらに第3の因子とアウトカムにも相関があるとき、Simpsonのパラドックスが起きる」
+::: 
+
+::: voice-daughter
+私「Simpsonのパラドックスねえ。交絡ってまあまあややこしいね」
+::: 
+
+::: voice-father
+お父さん「交絡は言葉自体になじみがないからそう思うだろうけど、もっとシンプルに考えることもできる。研究の原則としてときどき使う"ceteris paribus"というラテン語があってね。"All other things being equal"くらいの意味なんだけど、比較する集団で条件をそろえたら、交絡によるバイアスは生じない」
+::: 
+
+::: voice-daughter
+私「ふーん。まってね、さっきの条件を確認する。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か」
+::: 
+
+::: voice-father
+お父さん「表の意味はそういうことだね。でもね、正確にいうとSimpsonのパラドックスと交絡は、同じ現象じゃない。きちんと統計的に定式化して考えると、交絡はそんなに単純な問題じゃないんだ。層別前の解析は集団全体のオッズ比でしょ」
+::: 
+
+::: voice-daughter
+私「そうだね」
+::: 
+
+::: voice-father
+お父さん「当たり前だけど、層別後のオッズ比は、喫煙集団のオッズ比と非喫煙集団のオッズ比だよね。どっちが真値なんだろう？ターゲット集団によって真値が変わっていいの？」
+::: 
+
+::: voice-daughter
+私「ん？えっと、そうだね、コーヒーが健康に悪いかどうかは個人差ないと思う」
+::: 
+
+::: voice-father
+お父さん「うん。このケースでは喫煙は交絡因子なのは間違いないんだよ。でも、統計学の枠組みで、層別前と層別後のどっちのオッズ比が真値なのか、決めるロジックはないんだ。データがどんな確率分布に従っているか、誰も知らないからね」
+::: 
+
+::: voice-daughter
+私「へー」
 ::: 
 :::::::::::::::::::::::::::::::::
 
