--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Truth: What Is It That You Want to Know?"
+title: "What Is It That You Want to Know?"
 format:
   html:
     toc: true
@@ -148,7 +148,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Story and Quiz − Truth: What Is It That You Want to Know?
+# Truth − What Is It That You Want to Know?
 
 ::: {.serif-block .text-right}
 Keywords: clinical trial, observational study, Rubin causal model, study design
@@ -168,7 +168,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「ありがとう。この前ね、層別解析やロジスティック回帰でバイアスを**調整（adjustment）**できるよって話をしたよね」
+お父さん「ありがとう。この前のコーヒーと膵がんの話覚えてる？層別解析やロジスティック回帰で**交絡調整**できるよってやつ」
 ::: 
 
 ::: voice-daughter
@@ -176,7 +176,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「調整した結果が正しいと思う？それとも調整しない結果が正しい？」
+お父さん「あのとき、喫煙が交絡因子の一例だったよね。喫煙を調整した結果が正しいと思う？それとも調整しない結果が正しい？」
 ::: 
 
 ::: voice-daughter
@@ -208,7 +208,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「わかるよ。でも、データとロジスティック回帰だけじゃ、調整した結果が正しいかどうかわからないっていうのが統計学の結論なんだ。そろそろ本当のことを話そう」
+お父さん「わかるけど、もうちょっとつきあって。この前話したSimpsonのパラドックスは数字のパズルではないし、どっちの解析が正しいかっていうのも言葉遊びじゃない。データと真値の関係をどうとらえるか。その関係性そのものがひっくり返っているんだ。そろそろ本当のことを話そう」
 :::
 
 ### Rubin因果モデル
@@ -222,11 +222,11 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「残念ながら回帰分析のレールに乗っていたら、その真実にはたどり着けない。確率分布からスタートするんじゃなくて、"原因が変化したら結果はどうなっていたか"という疑問を基礎にして、研究方法を再構築するんだ。最近の因果推論ではね」
+お父さん「残念ながら回帰分析のレールに乗っていたら、その真実にはたどり着けない。確率分布からスタートするんじゃなくて、"原因が変化したら結果はどうなっていたか"という疑問を基礎にして、研究方法を再構築するんだ。因果推論っていう分野の考え方ではね」
 ::: 
 
 ::: voice-daughter
-私「解析をやり直せって言いたいの？」
+私「別の方法で解析をやり直せっていいたいの？」
 ::: 
 
 ::: voice-father
@@ -254,7 +254,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 :::
 
 ::: voice-father
-お父さん「違いを一言でいうと、一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造を表している。**データが発生する背後に因果モデルがある**っていう関係かな。さっき潜在結果変数って出てきたでしょ」
+お父さん「違いを一言でいうと、一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造を表している。**データが発生する背後に因果モデルがある**っていう階層的な関係っていえばいいかな。さっき潜在結果変数って出てきたでしょ」
 :::
 
 ::: voice-daughter
